# efficient-kant

./: README.md  pyproject.toml
examples/: mnist.py
src/efficient_kant/: __init__.py  kant.py
tests/: test_even_simpler_math.py  test_simple_math.py
